--- a/server/index.html
+++ b/server/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Server HTML</title>
+    <title>DupMe Server</title>
 </head>
 <body>
+    <!-- <script src="/socket.io/socket.io.js"></script> -->
+    <script src="script.js" type="module"></script>
+
     <h1>Hello</h1>
     <h2 id="player-count">0 players online</h2>
-    <button>Restart</button>
-
-    <script src="script.ts" type="module"></script>
+    <button id="restart-button">Restart</button>
+    <!-- <script src="/socket.io/socket.io.js"></script> -->
+    
 </body>
 </html>
