--- a/server/index.html
+++ b/server/index.html
@@ -6,13 +6,14 @@
     <title>DupMe Server</title>
 </head>
 <body>
-    <!-- <script src="/socket.io/socket.io.js"></script> -->
-    <script src="script.js" type="module"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="script.js"></script>
 
     <h1>Hello</h1>
     <h2 id="player-count">0 players online</h2>
-    <button id="restart-button">Restart</button>
-    <!-- <script src="/socket.io/socket.io.js"></script> -->
+    <button onclick="serverRestart('room 1')">room 1 Restart</button>
+    <button onclick="serverRestart('room 2')">room 2 Restart</button>
+    <button onclick="serverRestart('room 3')">room 3 Restart</button>
     
 </body>
 </html>
