--- a/server/index.html
+++ b/server/index.html
@@ -10,10 +10,21 @@
     <script src="script.js"></script>
 
     <h1>Hello</h1>
-    <h2 id="player-count">0 players online</h2>
-    <button onclick="serverRestart('room 1')">room 1 Restart</button>
-    <button onclick="serverRestart('room 2')">room 2 Restart</button>
-    <button onclick="serverRestart('room 3')">room 3 Restart</button>
-    
+    <h2 id="user-count">0 users online</h2>
+    <div>
+        <h3>Room 1</h3>
+        <button onclick="serverRestart('room 1')">room 1 Restart</button>
+        <p id="players-in-room1">players</p>
+    </div>
+    <div>
+        <h3>Room 2</h3>
+        <button onclick="serverRestart('room 2')">room 2 Restart</button>
+        <p id="players-in-room2">players</p>
+    </div>
+    <div>
+        <h3>Room 3</h3>
+        <button onclick="serverRestart('room 3')">room 3 Restart</button>
+        <p id="players-in-room3">players</p>
+    </div>
 </body>
 </html>
