ready set go ok
- server can now show the name of all players
- time client ok
- no player not found error
- restart ok
- player left room during game can restart the game
- **** no connection = route to path = "/"
- hide actual coundown in client

--- a/server/index.html
+++ b/server/index.html
@@ -13,22 +13,23 @@
     <div>
         <h2 id="user-count">0 users online</h2>
         <button onclick="refreshUsers()">Refresh User</button>
+        <p id="user-info">hola</p>
     </div>
     
     <div>
         <h3>Room 1</h3>
         <button onclick="serverRestart('room 1')">room 1 Restart</button>
-        <p id="players-in-room1">players</p>
+        <!-- <p id="players-in-room1">players</p> -->
     </div>
     <div>
         <h3>Room 2</h3>
         <button onclick="serverRestart('room 2')">room 2 Restart</button>
-        <p id="players-in-room2">players</p>
+        <!-- <p id="players-in-room2">players</p> -->
     </div>
     <div>
         <h3>Room 3</h3>
         <button onclick="serverRestart('room 3')">room 3 Restart</button>
-        <p id="players-in-room3">players</p>
+        <!-- <p id="players-in-room3">players</p> -->
     </div>
 </body>
 </html>
